<resources>
    <string name="app_name">ParentalCare</string>
    <string name="GeneralInfo">সাধারণ স্বাস্থ্যসেবা</string>
    <string name="ButtonProfile">প্রোফাইল</string>
    <string name="ButtonRegistration">নিবন্ধন</string>
    <string name="ButtonFood">খাদ্য ও পুষ্টি</string>
    <string name="ButtonBMIChart">BMI চার্ট</string>
    <string name="ButtonCommonDisease">সাধারণ রোগেরলক্ষণ ও প্রতিকার</string>
    <string name="ButtonVaccination">টীকা</string>
    <string name="ButtonDoc">অসুস্থ অনুভব করছি</string>
    <string name="ButtonExcercise">ব্যায়াম</string>
    <string name="ButtonHelp">জরুরী সাহায্য</string>
    <string name="ButtonTips">টিপস</string>
    <string name="ButtonBirth">বাচ্চা জন্মদান পদ্ধতি</string>
    <string name="ButtonCalender">ক্যালেন্ডার</string>
    <string name="ButtonWarning">পরামর্শ ও নিষেধাজ্ঞা সতর্কবার্তা</string>
    <string name="ButtonPrenatalVaccination">গর্ভকালীন টীকা</string>
    <string name="ButtonPrenatalSex">Button</string>
    <string name="ButtonChildCondition">শিশুর অবস্থাস</string>
    <string name="ButtonFAQ">সাধারণ প্রশ্নোত্তর</string>
    <string name="ButtonMother">মা</string>
    <string name="ButtonChild">শিশু</string>
    <string name="ButtonBF">স্তন্যপানর নিয়ম</string>
    <string name="ButtonMotherFood">মাতৃখাদ্য ও পুষ্টি </string>
    <string name="ButtonMotherHealthCare">স্বাস্থ্য সেবা</string>
    <string name="ButtonMotherWarning">নিষেধাজ্ঞা</string>
    <string name="ButtonCommonDis">সাধারণ রোগেরলক্ষণ ও প্রতিকার</string>
    <string name="ButtonMotherExercise">ব্যায়াম</string>
    <string name="ButtonMFAQ">সাধারণ প্রশ্নোত্তর </string>
    <string name="ButtonChildNeu">শিশুর খাদ্য ও পুষ্টি</string>
    <string name="ButtonChildHealth">শিশুর স্বাস্থ্য সেবা </string>
    <string name="ButtonChildVac">টীকা</string>
    <string name="ButtonChildExc">শিশুর ব্যায়াম</string>
    <string name="ButtonChildCommDis">সাধারণ রোগেরলক্ষণ ও প্রতিকার</string>
    <string name="ChildDisSym">রোগনির্ণয়</string>
    <string name="Height">উচ্চতা:</string>
    <string name="KG">কে.জি.</string>
    <string name="Weight">ওজন:</string>
    <string name="Feet">ফুট</string>
    <string name="Inc">ইঞ্চি</string>
    <string name="calc">পরিমাপ করুন</string>
    <string name="highBMI">"উচ্চ BMI এর শারীরিক  ঝুঁকি :
    ১. কার্ডিওভাসকুলার (হৃদয় ও রক্ত সঞ্চালন) রোগ
    ২. গলব্লাডার রোগ
    ৩. উচ্চ রক্তচাপ (হাইপারটেনশন)
    ৪. টাইপ 2 ডায়াবেটিস
    ৫. অস্টিওআর্থারাইটিস
    ৬. বিষণ্নতা ও অন্যান্য মানসিক স্বাস্থ্য রোগ"</string>
    <string name="lowBMI">নিন্ম BMI এর শারীরিক ঝুঁকি:
    ১. শ্বাসযন্ত্রের রোগ
    ২. পরিপাক রোগ
    ৩. ক্যান্সার
    ৪. অস্টিওপরোসিস.
    </string>
    <string name="normalBMI">অভিনন্দন আপনার BMI স্বাভাবিক পর্যায়ে আছে!
    </string>

</resources>